# Function-IsCorrect

./: Book.rar  README.md
iscorrect/: CMakeLists.txt  main.cpp
numder_series/: CMakeLists.txt  main.cpp
project/: Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  main.cpp
